--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,15 +33,15 @@ set -g bell-action none
 #setw -g mode-style 'fg=colour1 bg=colour18 bold'
 
 # panes
-set -g pane-border-style 'fg=#960018'
-set -g pane-active-border-style 'fg=#cb4c46'
+set -g pane-border-style 'fg=color233'
+set -g pane-active-border-style 'fg=colour1'
 
 # statusbar
 set -g status-position bottom
 set -g status-justify left
-set -g status-style 'bg=#960018 fg=#dddada dim'
+set -g status-style 'bg=colour233 fg=colour1 dim'
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=#db3434] %d/%m #[fg=colour233,bg=#ff8478] %H:%M:%S '
+set -g status-right '#[fg=colour233,bg=colour1] %d/%m #[fg=colour233,bg=colour1] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 20
 
